--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -320,7 +320,7 @@ Actor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCap
 Actor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 DecalActor=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
-DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+DirectionalLight=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections
 SphereReflectionCapture=PostProcessVolume.Lens.Lens,PostProcessVolume.Reflections.Reflections,SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens
 SkyAtmosphere=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
@@ -492,7 +492,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserTab1.SelectedPaths=/Game/Cinematics/Sequences/SewingRoom
 ContentBrowserTab1.SelectedPaths=/Game/Megascans/Surfaces
 ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
-ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Cabinet
+ContentBrowserTab1.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 None=======
 None=======
 None=======
@@ -922,7 +922,7 @@ HoleFillToolProperties="\"Object\" "
 HoleFillStatisticsProperties="\"Object\" "
 MaterialExpressionConstant2Vector="\"Object\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" "
-Light=
+Light="\"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" "
 MeshPaintModeSettings="\"Object\" "
 MaterialExpressionTextureObjectParameter="\"Object\" "
@@ -2680,7 +2680,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=False
+CleanShutdown=True
 None=======
 None=======
 None=======
@@ -3557,7 +3557,7 @@ WindowSize=X=1383.000 Y=812.000
 WindowSize=X=1384.667 Y=813.333
 WindowSize=X=1383.000 Y=812.000
 WindowSize=X=1391.000 Y=812.000
-WindowSize=X=1387.200 Y=811.200
+WindowSize=X=1388.000 Y=812.000
 InitiallyMaximized=True
 InitiallyMaximized=True
 InitiallyMaximized=True
