--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -196,12 +196,12 @@ RotGridEnabled=True
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Attic_02
-MRUItem1=/Game/Attic
-MRUItem2=/Game/stairwellblock3
-MRUItem3=/Game/abandonedroom_V2
-MRUItem4=/Game/Group_Materials/Insulation/M_In_Fab
-MRUItem5=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Attic_02
+MRUItem2=/Game/Attic
+MRUItem3=/Game/stairwellblock3
+MRUItem4=/Game/abandonedroom_V2
+MRUItem5=/Game/Group_Materials/Insulation/M_In_Fab
 MRUItem6=/Game/firstfloor
 MRUItem7=/Game/stairwellblock3_2
 MRUItem8=/Game/stairwellblock2
@@ -584,7 +584,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -672,7 +672,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/Attic_02
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -1779,6 +1779,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -2637,7 +2638,6 @@ InterchangeGenericAssetsPipeline.Animations=True
 InterchangeGenericAssetsPipeline.Materials=True
 InterchangeGenericAssetsPipeline.MaterialX=True
 InterchangeGenericAssetsPipeline.Textures=True
-Texture2D.Interchange =True
 InterchangeGenericMaterialPipeline.Materials=True
 InterchangeGenericMaterialPipeline.MaterialX=True
 InterchangeGenericMaterialPipeline.Textures=True
@@ -2736,7 +2736,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2772,26 +2772,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Charlotte/Assets/NewFolder/Attic_Fabric_Height
-MRUItem1=/Game/Group_Assets/Charlotte/Assets/NewFolder/NewMaterial
-MRUItem2=/Game/Group_Assets/Charlotte/Assets/Curtains/M_Curtains_01
-MRUItem3=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst
-MRUItem4=/Game/Group_Assets/Charlotte/Assets/Curtains/Celtic_BaseColor
-MRUItem5=/Game/Group_Assets/Charlotte/Assets/Curtains/curtains_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem6=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/Skirting_board_
-MRUItem7=/Game/Group_Materials/Insulation/M_Insulation
-MRUItem8=/Game/Group_Materials/Insulation/M_Ins_Fabric_Inst
-MRUItem9=/Game/Group_Materials/Insulation/M_Ins_Fabric
-MRUItem10=/Game/Group_Materials/Insulation/M_In_Fab
-MRUItem11=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_01
-MRUItem12=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_02
-MRUItem13=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1003_OcclusionRoughnessMetallic
-MRUItem14=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_03
-MRUItem15=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1002_OcclusionRoughnessMetallic
-MRUItem16=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/NewMaterial
-MRUItem17=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low
-MRUItem18=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1001_OcclusionRoughnessMetallic
-MRUItem19=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1001_BaseColor
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Charlotte/Assets/NewFolder/Attic_Fabric_Height
+MRUItem2=/Game/Group_Assets/Charlotte/Assets/NewFolder/NewMaterial
+MRUItem3=/Game/Group_Assets/Charlotte/Assets/Curtains/M_Curtains_01
+MRUItem4=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst
+MRUItem5=/Game/Group_Assets/Charlotte/Assets/Curtains/Celtic_BaseColor
+MRUItem6=/Game/Group_Assets/Charlotte/Assets/Curtains/curtains_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem7=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/Skirting_board_
+MRUItem8=/Game/Group_Materials/Insulation/M_Insulation
+MRUItem9=/Game/Group_Materials/Insulation/M_Ins_Fabric_Inst
+MRUItem10=/Game/Group_Materials/Insulation/M_Ins_Fabric
+MRUItem11=/Game/Group_Materials/Insulation/M_In_Fab
+MRUItem12=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_01
+MRUItem13=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_02
+MRUItem14=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1003_OcclusionRoughnessMetallic
+MRUItem15=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_03
+MRUItem16=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1002_OcclusionRoughnessMetallic
+MRUItem17=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/NewMaterial
+MRUItem18=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low
+MRUItem19=/Game/Group_Assets/Charlotte/Assets/Kitchen_Cabinet/Cabinet_low_1001_OcclusionRoughnessMetallic
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
