--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -204,8 +204,8 @@ RotGridEnabled=True
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/stairwellblock3
-MRUItem1=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/stairwellblock3
 MRUItem2=/Game/Attic_02
 MRUItem3=/Game/Attic
 MRUItem4=/Game/abandonedroom_V2
@@ -686,7 +686,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -2776,7 +2776,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2812,14 +2812,14 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Tashan/HighresScreenshot00031
-MRUItem1=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem2=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
-MRUItem3=/Game/Assets/Tashan/m_glass
-MRUItem4=/Game/Assets/Tashan/m_glass_Inst
-MRUItem5=/Game/Group_Assets/Tashan/chandielier/mat_chandelier
-MRUItem6=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst_2
-MRUItem7=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Tashan/HighresScreenshot00031
+MRUItem2=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem3=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
+MRUItem4=/Game/Assets/Tashan/m_glass
+MRUItem5=/Game/Assets/Tashan/m_glass_Inst
+MRUItem6=/Game/Group_Assets/Tashan/chandielier/mat_chandelier
+MRUItem7=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst_2
 MRUItem8=/Game/Group_Assets/Charlotte/Assets/NewFolder/Attic_Fabric_Height
 MRUItem9=/Game/Group_Assets/Charlotte/Assets/NewFolder/NewMaterial
 MRUItem10=/Game/Group_Assets/Charlotte/Assets/Curtains/M_Curtains_01
