--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -598,7 +598,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/SheetMusic
+ContentBrowserDrawer.SelectedPaths=/
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2779,7 +2779,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2815,9 +2815,9 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/SheetMusic/MusicSheets_albedo
-MRUItem1=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-MRUItem2=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Group_Assets/Aziz/Assets/SheetMusic/MusicSheets_albedo
+MRUItem2=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
 MRUItem3=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTilesSingular
 MRUItem4=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTiles
 MRUItem5=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
@@ -2944,6 +2944,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/TableStuff/SM_ChildsDrawing.SM_ChildsDrawing;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/TableStuff/KidsDrawing.KidsDrawing;
@@ -2963,7 +2964,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/S_
 RecentlyPlaced=/Game/Group_Materials/Insulation/M_Ins_Fabric_Inst.M_Ins_Fabric_Inst;
 RecentlyPlaced=/Game/Megascans/Decals/Concrete_Leakage_tk3jefoc/MI_Concrete_Leakage_tk3jefoc_2K.MI_Concrete_Leakage_tk3jefoc_2K;
 RecentlyPlaced=/Game/Group_Assets/Tashan/candelabra/candelabra_low.candelabra_low;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_ukqiebvbw/S_Wooden_Chest_ukqiebvbw_lod3.S_Wooden_Chest_ukqiebvbw_lod3;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
