--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -495,6 +495,7 @@ sm_shirt_folded_pile_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCap
 bp_bookpile_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 bp_bookpile_2_C=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,CineCameraActor.PostProcess.Lens,CineCameraActor.PostProcess.Rendering Features,PostProcessVolume.Lens.Lens,PostProcessVolume.Color Grading.Color Grading
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -686,7 +687,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/Living_Room
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 None=======
 None=======
 None=======
@@ -718,7 +719,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" \"Object.Texture.SourceColorSettings\" "
+Object="\"Object\" "
 None=======
 None=======
 None=======
