--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -599,7 +599,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -687,7 +687,7 @@ LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -719,7 +719,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 Object="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 None=======
@@ -881,7 +881,7 @@ StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\"
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" \"Object.ImportSettings.AssetImportData.Object.Interchange .Interchange | AssetImportData\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-StreamableRenderAsset="\"Object\" \"Object.Texture.SourceColorSettings\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorSaturation\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object\" \"Object.PostProcessVolumeSettings.Settings.ColorContrast\" \"Object.PostProcessVolumeSettings.Settings.ColorGammaShadows\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2816,26 +2816,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Group_Assets/Aziz/Assets/SheetMusic/MusicSheets_albedo
-MRUItem2=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-MRUItem3=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTilesSingular
-MRUItem4=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTiles
-MRUItem5=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
-MRUItem6=/Game/Group_Materials/Glass/MM_Glass
-MRUItem7=/Game/Group_Assets/Aziz/Assets/MM_Glass
-MRUItem8=/Game/Group_Assets/Aziz/Assets/SM_Bulb
-MRUItem9=/Game/Group_Assets/Tashan/HighresScreenshot00031
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
-MRUItem11=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
-MRUItem12=/Game/Assets/Tashan/m_glass
-MRUItem13=/Game/Assets/Tashan/m_glass_Inst
-MRUItem14=/Game/Group_Assets/Tashan/chandielier/mat_chandelier
-MRUItem15=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst_2
-MRUItem16=/Game/Group_Assets/Charlotte/Assets/NewFolder/Attic_Fabric_Height
-MRUItem17=/Game/Group_Assets/Charlotte/Assets/NewFolder/NewMaterial
-MRUItem18=/Game/Group_Assets/Charlotte/Assets/Curtains/M_Curtains_01
-MRUItem19=/Game/Megascans/Surfaces/Worn_Wall_Plaster_tmglejmcw/MI_Worn_Wall_Plaster_tmglejmcw_2K_Inst
+MRUItem0=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows3
+MRUItem1=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows2
+MRUItem2=/Game/Living_Room
+MRUItem3=/Game/Group_Assets/Aziz/Assets/SheetMusic/MusicSheets_albedo
+MRUItem4=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
+MRUItem5=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTilesSingular
+MRUItem6=/Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTiles
+MRUItem7=/Game/Group_Assets/Aziz/Assets/Fireplace/MM_FireplaceTexture1
+MRUItem8=/Game/Group_Materials/Glass/MM_Glass
+MRUItem9=/Game/Group_Assets/Aziz/Assets/MM_Glass
+MRUItem10=/Game/Group_Assets/Aziz/Assets/SM_Bulb
+MRUItem11=/Game/Group_Assets/Tashan/HighresScreenshot00031
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/mirror/M_Mirror
+MRUItem13=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst
+MRUItem14=/Game/Assets/Tashan/m_glass
+MRUItem15=/Game/Assets/Tashan/m_glass_Inst
+MRUItem16=/Game/Group_Assets/Tashan/chandielier/mat_chandelier
+MRUItem17=/Game/Group_Assets/Tashan/chandielier/mat_chandelier_Inst_2
+MRUItem18=/Game/Group_Assets/Charlotte/Assets/NewFolder/Attic_Fabric_Height
+MRUItem19=/Game/Group_Assets/Charlotte/Assets/NewFolder/NewMaterial
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -2945,6 +2945,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows3.SmallPillows3;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows2.SmallPillows2;
 RecentlyPlaced=/Game/StarterContent/Particles/P_Ambient_Dust.P_Ambient_Dust;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/SheetMusic/MM_SheetMusicBeethoven.MM_SheetMusicBeethoven;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/TableStuff/SM_ChildsDrawing.SM_ChildsDrawing;
@@ -2963,8 +2965,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/S_
 RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/S_Modular_Floor_Moulding_Kit_wi0mafddw_lod3_Var3.S_Modular_Floor_Moulding_Kit_wi0mafddw_lod3_Var3;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Modular_Floor_Moulding_Kit_wi0mafddw/S_Modular_Floor_Moulding_Kit_wi0mafddw_lod3_Var1.S_Modular_Floor_Moulding_Kit_wi0mafddw_lod3_Var1;
 RecentlyPlaced=/Game/Group_Materials/Insulation/M_Ins_Fabric_Inst.M_Ins_Fabric_Inst;
-RecentlyPlaced=/Game/Megascans/Decals/Concrete_Leakage_tk3jefoc/MI_Concrete_Leakage_tk3jefoc_2K.MI_Concrete_Leakage_tk3jefoc_2K;
-RecentlyPlaced=/Game/Group_Assets/Tashan/candelabra/candelabra_low.candelabra_low;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3444,6 +3444,8 @@ None=======
 /Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTiles.SM_RoofTiles=1
 /Game/Group_Assets/Aziz/Assets/Wall/SM_RoofTilesSingular.SM_RoofTilesSingular=1
 /Game/Group_Assets/Aziz/Assets/SheetMusic/MusicSheets_albedo.MusicSheets_albedo=1
+/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows2.SmallPillows2=1
+/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows/SmallPillows3.SmallPillows3=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
