--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -203,13 +203,13 @@ RotGridEnabled=False
 RotGridEnabled=True
 
 [MRU]
-MRUItem0=/Game/firstfloor
-MRUItem1=/Game/Attic
-MRUItem2=/Game/Attic_02
-MRUItem3=/Game/stairwellblock3
-MRUItem4=/Game/abandonedroom_V2
-MRUItem5=/Game/Group_Materials/Insulation/M_In_Fab
-MRUItem6=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/firstfloor
+MRUItem2=/Game/Attic
+MRUItem3=/Game/Attic_02
+MRUItem4=/Game/stairwellblock3
+MRUItem5=/Game/abandonedroom_V2
+MRUItem6=/Game/Group_Materials/Insulation/M_In_Fab
 MRUItem7=/Game/stairwellblock3_2
 MRUItem8=/Game/stairwellblock2
 MRUItem9=/Game/Assets/Amy/firstfloor
@@ -218,7 +218,6 @@ MRUItem10=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -608,7 +607,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -718,7 +717,7 @@ LastLevel=/Game/stairwellblock3
 LastLevel=/Game/Living_Room
 LastLevel=/Game/stairwellblock3
 LastLevel=/Game/firstfloor
-LastLevel=/Game/firstfloor
+LastLevel=/Game/Living_Room
 None=======
 None=======
 None=======
@@ -1861,6 +1860,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Actor.Rendering=True
 Actor.Replication=True
 Actor.Collision=True
@@ -2737,7 +2737,6 @@ LevelSequenceActor.InstanceData=True
 LevelSequenceActor.Collision=True
 LevelSequenceActor.Networking=True
 LevelSequenceActor.Actor=True
-Texture2D.Interchange =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2833,7 +2832,7 @@ WmfMediaSettings=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 CleanShutdown=True
-CleanShutdown=True
+CleanShutdown=False
 None=======
 None=======
 None=======
@@ -2871,26 +2870,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem1=/Game/Assets/Amy/Asset/pillow/pillow_texture
-MRUItem2=/Game/firstfloor
-MRUItem3=/Game/Group_Assets/PLANTS/MAT_plants
-MRUItem4=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
-MRUItem5=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
-MRUItem6=/Game/Group_Assets/Tashan/book/mat_book
-MRUItem7=/Game/Group_Assets/Tashan/table/mat_cloth
-MRUItem8=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
-MRUItem9=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
-MRUItem10=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
-MRUItem11=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
-MRUItem12=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
-MRUItem13=/Game/Group_Assets/Tashan/lamp/mat_lamp
-MRUItem14=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls
-MRUItem15=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst2
-MRUItem16=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst1
-MRUItem17=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
-MRUItem18=/Game/Group_Assets/Tashan/Wood/cabinet
-MRUItem19=/Game/Group_Assets/Tashan/Wood/cabinet_Inst
+MRUItem0=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem3=/Game/Assets/Amy/Asset/pillow/pillow_texture
+MRUItem4=/Game/firstfloor
+MRUItem5=/Game/Group_Assets/PLANTS/MAT_plants
+MRUItem6=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
+MRUItem7=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
+MRUItem8=/Game/Group_Assets/Tashan/book/mat_book
+MRUItem9=/Game/Group_Assets/Tashan/table/mat_cloth
+MRUItem10=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
+MRUItem11=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
+MRUItem12=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
+MRUItem13=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
+MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
+MRUItem15=/Game/Group_Assets/Tashan/lamp/mat_lamp
+MRUItem16=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls
+MRUItem17=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst2
+MRUItem18=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst1
+MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
