--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -201,6 +201,7 @@ CurrentRotGridSize=0
 CurrentScalingGridSize=1
 RotGridEnabled=False
 RotGridEnabled=True
+GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/Living_Room
@@ -218,6 +219,7 @@ MRUItem10=/Game/abandonedroom_Migration
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 SceneCaptureCube=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube.SceneCapture.Advanced Show Flags,SceneCaptureCube.SceneCapture.Lighting Features Show Flags,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,CineCameraActor.PostProcess.Lens,PostProcessVolume.Lens.Lens
@@ -607,7 +609,7 @@ ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/CurtainPole
 ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/Pillows/SmallerPillows
 ContentBrowserDrawer.SelectedPaths=/Game
-ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets
+ContentBrowserDrawer.SelectedPaths=/Game/Group_Assets/Aziz/Assets/WallTiles
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -885,15 +887,15 @@ SceneCapture="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
-MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[1].Object.ParameterValue\" "
+MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[1].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
-MaterialExpression="\"Object\" "
+MaterialExpression="\"Object\" \"Object.Constant\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpressionOneMinus="\"Object\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -1011,7 +1013,7 @@ MaterialExpressionConstant2Vector="\"Object\" "
 DirectionalLight="\"Object.Light.DirectionalLightComponent.Object.Light.LightingChannels\" "
 Light=
 Light="\"Object.Light.SpotLightComponent.Object.Light.LightingChannels\" "
-Light="\"Object.Light.SpotLightComponent.Object.Light.LightingChannels\" "
+Light=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" "
 MeshPaintModeSettings="\"Object\" "
 MaterialExpressionTextureObjectParameter="\"Object\" "
@@ -2870,26 +2872,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-MRUItem1=/Game/Living_Room
-MRUItem2=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem3=/Game/Assets/Amy/Asset/pillow/pillow_texture
-MRUItem4=/Game/firstfloor
-MRUItem5=/Game/Group_Assets/PLANTS/MAT_plants
-MRUItem6=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
-MRUItem7=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
-MRUItem8=/Game/Group_Assets/Tashan/book/mat_book
-MRUItem9=/Game/Group_Assets/Tashan/table/mat_cloth
-MRUItem10=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
-MRUItem11=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
-MRUItem12=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
-MRUItem13=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
-MRUItem14=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
-MRUItem15=/Game/Group_Assets/Tashan/lamp/mat_lamp
-MRUItem16=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls
-MRUItem17=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst2
-MRUItem18=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst1
-MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood
+MRUItem0=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3
+MRUItem1=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2
+MRUItem2=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower
+MRUItem3=/Game/Group_Assets/Aziz/Assets/MI_BrownWallTilesLower
+MRUItem4=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
+MRUItem5=/Game/Living_Room
+MRUItem6=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem7=/Game/Assets/Amy/Asset/pillow/pillow_texture
+MRUItem8=/Game/firstfloor
+MRUItem9=/Game/Group_Assets/PLANTS/MAT_plants
+MRUItem10=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
+MRUItem11=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
+MRUItem12=/Game/Group_Assets/Tashan/book/mat_book
+MRUItem13=/Game/Group_Assets/Tashan/table/mat_cloth
+MRUItem14=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
+MRUItem15=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
+MRUItem16=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
+MRUItem17=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
+MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
+MRUItem19=/Game/Group_Assets/Tashan/lamp/mat_lamp
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3011,6 +3013,15 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3.MI_BrownWallTilesLower3;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2.MI_BrownWallTilesLower2;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower.MI_BrownWallTilesLower;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/MM_RimThingies.MM_RimThingies;
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/WallPanel.WallPanel;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst.mat_sidwalls_Inst;
+RecentlyPlaced=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls.mat_sidwalls;
+RecentlyPlaced=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst_Inst.mat_sidwalls_Inst_Inst;
 RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/room_v5_Cube.room_v5_Cube;
 RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper_Inst.mat_wallpaper_Inst;
 RecentlyPlaced=/Game/Assets/Amy/Asset/pillow/pillow_texture.pillow_texture;
@@ -3022,15 +3033,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concret
 RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1.MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst.MM_whitewood_Inst_Inst;
 RecentlyPlaced=/Game/Assets/Tashan/stairs/Stairsidestraight.Stairsidestraight;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst2.MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst2;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst.MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Cardboard_Boxes_Pack_uewlfg2va/MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst1.MI_Cardboard_Boxes_Pack_uewlfg2va_2K_Inst1;
-RecentlyPlaced=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst.mat_sidwalls_Inst;
-RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/MM_wood_Inst2.MM_wood_Inst2;
-RecentlyPlaced=/Game/Assets/04.04;
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/cabinet_Inst.cabinet_Inst;
-RecentlyPlaced=/Game/Group_Assets/Tashan/Wood/cabinet_Inst1.cabinet_Inst1;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3530,6 +3532,10 @@ None=======
 /Game/Group_Assets/Tashan/sidewalls/mat_sidwalls.mat_sidwalls=1
 /Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst.MI_Brown_Decorative_Book_vdjlainaa_2K_Inst=1
 /Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst.MI_Clay_Vase_uddlffshw_4K_Inst=1
+/Game/Group_Assets/Aziz/Assets/MI_BrownWallTilesLower.MI_BrownWallTilesLower=1
+/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower.MI_BrownWallTilesLower=1
+/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2.MI_BrownWallTilesLower2=1
+/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3.MI_BrownWallTilesLower3=1
 
 [MaterialInstanceEditor]
 bShowGrid=True
@@ -5103,7 +5109,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [PluginBrowser]
 InstalledPlugins=WMFCodecs
