--- a/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall 5.2/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -2872,26 +2872,26 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/abandonedroom_Migration.abandonedroom_Migration", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3
-MRUItem1=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2
-MRUItem2=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower
-MRUItem3=/Game/Group_Assets/Aziz/Assets/MI_BrownWallTilesLower
-MRUItem4=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
-MRUItem5=/Game/Living_Room
-MRUItem6=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
-MRUItem7=/Game/Assets/Amy/Asset/pillow/pillow_texture
-MRUItem8=/Game/firstfloor
-MRUItem9=/Game/Group_Assets/PLANTS/MAT_plants
-MRUItem10=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
-MRUItem11=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
-MRUItem12=/Game/Group_Assets/Tashan/book/mat_book
-MRUItem13=/Game/Group_Assets/Tashan/table/mat_cloth
-MRUItem14=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
-MRUItem15=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
-MRUItem16=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
-MRUItem17=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
-MRUItem18=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
-MRUItem19=/Game/Group_Assets/Tashan/lamp/mat_lamp
+MRUItem0=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_WoodBrown
+MRUItem1=/Game/Living_Room
+MRUItem2=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3
+MRUItem3=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2
+MRUItem4=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower
+MRUItem5=/Game/Group_Assets/Aziz/Assets/MI_BrownWallTilesLower
+MRUItem6=/Game/Group_Assets/Aziz/Assets/MM_RimThingies
+MRUItem7=/Game/Assets/Amy/Asset/pillow/pillow_initialShadingGroup_OcclusionRoughnessMetallic
+MRUItem8=/Game/Assets/Amy/Asset/pillow/pillow_texture
+MRUItem9=/Game/firstfloor
+MRUItem10=/Game/Group_Assets/PLANTS/MAT_plants
+MRUItem11=/Game/Megascans/3D_Assets/Clay_Vase_uddlffshw/MI_Clay_Vase_uddlffshw_4K_Inst
+MRUItem12=/Game/Megascans/3D_Assets/Brown_Decorative_Book_vdjlainaa/MI_Brown_Decorative_Book_vdjlainaa_2K_Inst
+MRUItem13=/Game/Group_Assets/Tashan/book/mat_book
+MRUItem14=/Game/Group_Assets/Tashan/table/mat_cloth
+MRUItem15=/Game/Group_Assets/Tashan/table/mat_cloth_Inst
+MRUItem16=/Game/Group_Assets/Tashan/sidewalls/mat_sidwalls_Inst1
+MRUItem17=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1
+MRUItem18=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst
+MRUItem19=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst
 
 [DetailCategoriesAdvanced]
 PreviewMaterial.Translucency=True
@@ -3013,6 +3013,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_WoodBrown.MI_WoodBrown;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3.MI_BrownWallTilesLower3;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2.MI_BrownWallTilesLower2;
 RecentlyPlaced=/Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower.MI_BrownWallTilesLower;
@@ -3032,7 +3033,6 @@ RecentlyPlaced=/Game/Group_Assets/Tashan/wallpaper/mat_wallpaper.mat_wallpaper;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst.MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Concrete_Plant_Pot_ui1ldhkba/MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1.MI_Concrete_Plant_Pot_ui1ldhkba_4K_Inst1;
 RecentlyPlaced=/Game/Group_Assets/Tashan/M4/Tashan/Assets/blockout/MM_whitewood_Inst_Inst.MM_whitewood_Inst_Inst;
-RecentlyPlaced=/Game/Assets/Tashan/stairs/Stairsidestraight.Stairsidestraight;
 
 [AssetEditorToolkitTabLocation]
 /Game/Group_Materials/Glass/Glass_Inst.Glass_Inst=1
@@ -3536,9 +3536,10 @@ None=======
 /Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower.MI_BrownWallTilesLower=1
 /Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower2.MI_BrownWallTilesLower2=1
 /Game/Group_Assets/Aziz/Assets/WallTiles/MI_BrownWallTilesLower3.MI_BrownWallTilesLower3=1
+/Game/Group_Assets/Aziz/Assets/WallTiles/MI_WoodBrown.MI_WoodBrown=1
 
 [MaterialInstanceEditor]
-bShowGrid=True
+bShowGrid=False
 bDrawGrid=False
 PrimType=1
 
